// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobsDB Error Page should render correctly 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      yelling={true}
    >
      Hmm... we can't seem to load the screen
    </Text>
    <Text
      baseline={true}
      className="subTitle"
      loud={true}
      secondary={true}
    >
      Keep calm and retry first
    </Text>
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
    >
      Retry
    </Button>
  </Section>
</Card>
`;

exports[`JobsDB Error Page should render correctly, with customeButton props onClick 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      yelling={true}
    >
      Hmm... we can't seem to load the screen
    </Text>
    <Text
      baseline={true}
      className="subTitle"
      loud={true}
      secondary={true}
    >
      Keep calm and retry first
    </Text>
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
    >
      Retry
    </Button>
  </Section>
</Card>
`;

exports[`JobsDB Error Page should render correctly, with customeButton props onClick and text 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      yelling={true}
    >
      Hmm... we can't seem to load the screen
    </Text>
    <Text
      baseline={true}
      className="subTitle"
      loud={true}
      secondary={true}
    >
      Keep calm and retry first
    </Text>
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
    >
      Search Again
    </Button>
  </Section>
</Card>
`;

exports[`JobsDB Error Page should render correctly, with customeButton props text 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      yelling={true}
    >
      Hmm... we can't seem to load the screen
    </Text>
    <Text
      baseline={true}
      className="subTitle"
      loud={true}
      secondary={true}
    >
      Keep calm and retry first
    </Text>
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
    >
      Search Again
    </Button>
  </Section>
</Card>
`;

exports[`JobsDB Error Page should render correctly, with customeText props headline 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      yelling={true}
    >
      keep calm
    </Text>
    <Text
      baseline={true}
      className="subTitle"
      loud={true}
      secondary={true}
    />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
    >
      Retry
    </Button>
  </Section>
</Card>
`;

exports[`JobsDB Error Page should render correctly, with customeText props headline and subline 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      yelling={true}
    >
      keep calm
    </Text>
    <Text
      baseline={true}
      className="subTitle"
      loud={true}
      secondary={true}
    >
      try again
    </Text>
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
    >
      Retry
    </Button>
  </Section>
</Card>
`;

exports[`JobsDB Error Page should render correctly, with customeText props subline 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      yelling={true}
    />
    <Text
      baseline={true}
      className="subTitle"
      loud={true}
      secondary={true}
    >
      keep calm
    </Text>
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
    >
      Retry
    </Button>
  </Section>
</Card>
`;
